name:                cabal-extras
version:             0.0.1
synopsis:            I add misc things here that I have not found in cabal-install, Cabal.
license:             AGPL-3
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
copyright:           2015-2020 zerobuzz.net
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable cabal-extras
  main-is:
    Main.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
      base >= 4.7 && < 4.8
    , bytestring
    , Cabal >= 1.22.3.0
    , configifier == 0.0.3
    , directory
    , pretty-show
    , string-conversions
  other-modules:
  other-extensions:
