name:                cabal-extras
version:             0.0.1
synopsis:            I add misc things here that I have not found in cabal-install, Cabal.
license:             AGPL-3
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
copyright:           2015-2020 zerobuzz.net
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable cabal-extras
  main-is:
    Main.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
  -- source: ./cabal.config-
  -- source: https://www.stackage.org/lts-3.5/cabal.config
      attoparsec >=0.12.1.6 && <0.13
    , base >=4.8.1 && <4.9
    , bytestring >=0.10.6.0 && <0.11
    , Cabal >=1.22.4.0 && <1.23
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , directory >=1.2.2.0 && <1.3
    , functor-infix >=0.0.3 && <0.1
    , lens >=4.12.3 && <4.13
    , pretty-show >=1.6.8.2 && <1.7
    , string-conversions >=0.4 && <0.5
    , wreq >=0.4.0.0 && <0.5
  other-modules:
  other-extensions:
